# Learning-Generative-AI

./: .env  01_hello_world.py  02_multiple_roles.py  04_JSON_Response.py  06_Asst_code_interprator.py  06_assistants.py  07_Asst_knowledge_retrival.py  08_Assistant_function_calling.py  09_vision.py  10_text_to_speech.py  12_stt_transcribe.py
01_Chat_gpt/: 01_hello_world.py  03_stream.py  05_function_calling.py  07_Asst_knowledge_retrival.py  08_Assistant_function_calling.py  09_vision.py  11_stt_transcription.py  13_image_generate.py
02_streamlit_ui/: 01_magic_displayData.py  03_BMI_calculator_project.py  04_Main_page.py  05_Counter_Session.py  07_Coulmns.py  08_Container.py  10_expender.py  11_sidebar.py  12_tabs.py  13_chat_input.py  15_status.py  16_secrete_management.py  readme.md
02_streamlit_ui/pages/: 2_profile.py
03_everything_is_API/01_requests/: requests.ipynb
03_everything_is_API/02_Pydantic/: code.ipynb  requirements.txt
03_everything_is_API/03_serverless_postgresql_database/: readme.md
03_everything_is_API/04_pytest/: readme.md  test_class.py
04_poetry_setup/: readme.md
04_poetry_setup/fastapi_helloworld/: pyproject.toml
04_poetry_setup/fastapi_helloworld/fastapi_helloworld/: main.py
04_poetry_setup/fastapi_helloworld/tests/: test_main.py
05_docker/: readme.md
05_docker/03_docker_compse/: README.md  compose.yml  pyproject.toml
05_docker/03_docker_compse/03_docker_compose/: main.py
05_docker/abcd/: Dockerfile
06_KAFKA/: readme.md
streamlit_ui/: 00_hello.py  02_basics.py  06_Callback_Session.py  09_empty.py  14_chat_message.py
(+46 files in other folders)
