[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["afrazahmad <afrazahmad313@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.1.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
